# motorcycle_dynamics_v4

./: .gitignore  README.md  launcher.sh  tech_stack.md
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
frontend/: package-lock.json  package.json
frontend/src/: app.html
frontend/src/lib/: frontEndGeometry.ts  tire.ts
frontend/src/lib/components/: FrontEndDiagram.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/aero-cfd/: +page.svelte
frontend/src/routes/components/: +page.svelte
frontend/src/routes/frame/: +page.svelte
frontend/src/routes/frame-fea/: +page.svelte
frontend/src/routes/front-end/: +page.svelte
frontend/src/routes/geometry/: +page.svelte
frontend/src/routes/kinematics/: +page.svelte
frontend/src/routes/materials/: +page.svelte
frontend/src/routes/results/: +page.svelte
frontend/src/routes/settings/: +page.svelte
frontend/src/routes/suspension/: +page.svelte
