[project]
name = "mototelos-backend"
version = "0.1.0"
description = "Mototelos Motorcycle Dynamics — simulation backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "numpy>=1.26",
    "scipy>=1.12",
    "polars>=0.20",
    "aiosqlite>=0.20",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.8",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py312"
